welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:15: error: type mismatch;
 found   : Unit
 required: Boolean
    	gauche;
        ^SlugTracking:13: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur)
    ^